[package]
name = "algorithms"
version = "0.1.0"
authors = ["Angel Leon <luianglenlop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.point]
path="../point"

[dependencies.jsonable]
path="../jsonable"

[dependencies]
rand = '*'